@@ -13,23 +13,28 @@ package org.zowe.apiml.util;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+@ExtendWith(MockitoExtension.class)
 class CorsUtilsTest {
 
-    Map<String, String> metadata = new HashMap<>();
-    List<String> defaultCorsMethods = List.of("GET", "HEAD", "POST", "PATCH", "DELETE", "PUT", "OPTIONS");
+    private Map<String, String> metadata = new HashMap<>();
+    private List<String> defaultCorsMethods = List.of("GET", "HEAD", "POST", "PATCH", "DELETE", "PUT", "OPTIONS");
 
-    List<String> allowedEndpoints = List.of("/gateway/**");
+    private List<String> allowedEndpoints = List.of("/gateway/**");
 
     @BeforeEach
     void setup() {
+        metadata.clear();
         metadata.put("apiml.routes.v1.gateway", "api/v1");
         metadata.put("apiml.corsEnabled", "true");
     }
@@ -40,7 +45,19 @@ class CorsUtilsTest {
         @Nested
         class givenDefaultCorsAllowedMethods {
 
-            CorsUtils corsUtils = new CorsUtils(true, defaultCorsMethods, allowedEndpoints);
+            private CorsUtils corsUtils;
+
+            @BeforeEach
+            void setUp() {
+                corsUtils = CorsUtils.builder()
+                    .gatewayCorsEnabled(true)
+                    .corsAllowedEndpoints(allowedEndpoints)
+                    .defaultAllowedCorsHttpMethods(defaultCorsMethods)
+                    .defaultAllowedCorsOrigins(Collections.emptyList())
+                    .defaultAllowedCorsHeaders(List.of("*"))
+                    .defaultAllowCredentials(true)
+                    .build();
+            }
 
             @Test
             void registerDefaultConfig() {
@@ -56,7 +73,7 @@ class CorsUtilsTest {
             @Test
             void registerConfigForService() {
 
-                corsUtils.setCorsConfiguration("dclient", metadata, (path, serviceId, configuration) -> {
+                corsUtils.setCorsConfiguration("dclient", metadata, (path, configuration) -> {
                         assertEquals(metadata.get("apiml.routes.v1.gateway"), path);
                         assertNotNull(configuration.getAllowedHeaders());
                         assertEquals(1, configuration.getAllowedHeaders().size());
@@ -69,9 +86,10 @@ class CorsUtilsTest {
             @Test
             void registerDefaultConfigForService() {
                 metadata.remove("apiml.corsEnabled");
-                corsUtils.setCorsConfiguration("dclient", metadata, (path, serviceId, configuration) -> {
+                corsUtils.setCorsConfiguration("dclient", metadata, (path, configuration) -> {
                         assertEquals(metadata.get("apiml.routes.v1.gateway"), path);
-                        assertNull(configuration.getAllowedMethods());
+                        assertTrue(configuration.getAllowCredentials());
+                        assertEquals(List.of("GET", "HEAD", "POST", "PATCH", "DELETE", "PUT", "OPTIONS"), configuration.getAllowedMethods());
                     }
                 );
             }
@@ -80,7 +98,7 @@ class CorsUtilsTest {
             void registerConfigForServiceWithCustomOrigins() {
                 Map<String, String> customMetadata = new HashMap<>(metadata);
                 customMetadata.put("apiml.corsAllowedOrigins", "https://localhost:3000,http://hostname.com,https://anothehostname:3040");
-                corsUtils.setCorsConfiguration("dclient", customMetadata, (path, serviceId, configuration) -> {
+                corsUtils.setCorsConfiguration("dclient", customMetadata, (path, configuration) -> {
                         assertEquals(metadata.get("apiml.routes.v1.gateway"), path);
                         assertNotNull(configuration.getAllowedHeaders());
                         assertTrue(configuration.getAllowedOrigins().contains("https://localhost:3000"));
@@ -90,31 +108,46 @@ class CorsUtilsTest {
                     }
                 );
             }
+
         }
 
     }
 
     @Nested
     class GivenCorsDisabled {
-        CorsUtils corsUtils = new CorsUtils(false, null, Arrays.asList("/gateway/**", "/api-docs"));
+
+        private CorsUtils corsUtils;
+
+        @BeforeEach
+        void setUp() {
+            corsUtils = CorsUtils.builder()
+                .gatewayCorsEnabled(false)
+                .corsAllowedEndpoints(Arrays.asList("/gateway/**", "/api-docs"))
+                .defaultAllowedCorsOrigins(List.of("https://localhost3:10010"))
+                .defaultAllowedCorsHeaders(List.of("*"))
+                .defaultAllowedCorsHttpMethods(List.of("GET", "HEAD"))
+                .build();
+        }
 
         @Test
         void registerEmptyDefaultConfig() {
             corsUtils.registerDefaultCorsConfiguration((path, configuration) -> {
-                    assertNull(configuration.getAllowedHeaders());
-                    assertNull(configuration.getAllowedMethods());
+                    assertEquals(List.of("https://localhost3:10010"), configuration.getAllowedOrigins());
+                    assertEquals(List.of("*"), configuration.getAllowedHeaders());
+                    assertEquals(List.of("GET", "HEAD"), configuration.getAllowedMethods());
                 }
             );
         }
 
         @Test
         void registerEmptyConfigForService() {
-            corsUtils.setCorsConfiguration("dcclient", metadata, (path, serviceId, configuration) -> {
+            corsUtils.setCorsConfiguration("dcclient", metadata, (path, configuration) -> {
                     assertNull(configuration.getAllowedHeaders());
                     assertNull(configuration.getAllowedMethods());
                 }
             );
         }
+
     }
 
 }
